# Jogo-tecprog

./: .gitignore  CMakeLists.txt  README.md  jogo_tecprog.slnx  jogo_tecprog.vcxproj  main.cpp
include/: Bola_de_Espinhos.h  Chefao.h  Ente.h  Entidade.h  Espinhos.h  Fase.h  FasePrimeira.h  FaseSegunda.h  Figura.h  Gerenciador_Colisoes.h  Gerenciador_Grafico.h  HUD.h  Inim_Facil.h  Inim_Medio.h  Inimigo.h  Jogador.h  Jogo.h  Lista.h  ListaEntidades.h  Menu.h  MenuBase.h  MenuInicial.h  Obst_Dificil.h  Obst_Medio.h  Obstaculo.h  Pedrado.h  Pedrao.h  Pedroso.h  Personagem.h  Plataforma.h  Projetil.h  Rosquinha.h
saves/: leaderboard.txt  leaderboard.txt.example  save_jogo.txt  save_jogo.txt.example
src/: Bola_de_Espinhos.cpp  Chefao.cpp  Ente.cpp  Entidade.cpp  Espinhos.cpp  Fase.cpp  FasePrimeira.cpp  FaseSegunda.cpp  Figura.cpp  Gerenciador_Colisoes.cpp  Gerenciador_Grafico.cpp  HUD.cpp  Inim_Facil.cpp  Inim_Medio.cpp  Inimigo.cpp  Jogador.cpp  Jogo.cpp  ListaEntidades.cpp  Menu.cpp  MenuBase.cpp  MenuInicial.cpp  Obst_Dificil.cpp  Obst_Medio.cpp  Obstaculo.cpp  Pedrado.cpp  Pedrao.cpp  Pedroso.cpp  Personagem.cpp  Plataforma.cpp  Projetil.cpp  Rosquinha.cpp  main.cpp
